# SimpleExamBrowser

./: .gitignore  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  ReadMe.md  main.cpp  resources.qrc
src/guard/: CMakeLists.txt  actionsProtector.c  actionsProtector.h
ui/: browser.cpp  browser.h  browser.ui
